# priima

./: .gitignore  .gitmodules  Makefile  README.md  base_requirements.txt  docker-compose.yml  priima.config.yml  requirements.txt
docker/priima/: Dockerfile
docs/: algorithm-explanation.md  dev-setup-instructions.md  icon-notes.md
fast_cast/: CMakeLists.txt
fast_cast/src/: CMakeLists.txt  tps_trans.cpp  tps_trans.hpp
fast_cast/src/opencv2/: shape.hpp
fast_cast/src/opencv2/shape/: emdL1.hpp  shape_distance.hpp  shape_transformer.hpp
icon_grid/POLAR_GRID/: antarctic_grid_generator.py
priima/: config.py  download_icon.py  drift_handler.py  fast_cast.py  gcp.py  geo_tools.py  grid_generator.py  icon.py  image_forecast.py  inverse_gcps_recipe.py  order.py  plot_drift.py  preprocessing.py  projection.py  shapefile.py  smoc.py  video.py  warp_forecast.py  wind.py
tests/: test_config.py  test_drift_handler.py  test_fast_cast.py  test_geo_tools.py  test_icon.py  test_image_forecast.py  test_order.py  test_projection.py  test_shapefile.py  test_smoc_currents.py  test_warp_forecast.py  test_wind.py
